Updated descriptions of projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,12 +134,11 @@
                 >
                 <div class="descTechText">
                   <p>
-                    <u class="unBold">Description:</u> Lorem ipsum dolor sit
-                    amet, consectetur adipisicing elit.
+                    <u class="unBold">Description:</u> (Collaboration)  Life Relocated is a moving/relocation app that makes API calls to Google Maps and Wolfram Alpha to provide location & demographic information about a desired location.
                   </p>
                   <br />
                   <p>
-                    <u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, AJAX
                   </p>
                 </div>
               </div>
@@ -204,7 +203,7 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A short, timed trivia game utilizing interval and timeout functions.</p>
                     <br>
                     <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
                   </div>
@@ -235,7 +234,7 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A simple number matching game where random values are generated and added together to attempt to equal a random value.</p>
                     <br>
                     <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
                   </div>
@@ -266,9 +265,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A console-based program that simulates a simplified online retail site.  Inventory can be subtracted and added through use of customer and manager programs.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> MySQL, Node.js, JavaScript</p>
                   </div>
               </div>
             </div>
@@ -297,9 +296,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> LIRI Bot is a program that can retrieve information about bands on tour, songs, and movies. It takes in user inputs from a command terminal and pulls data from different API's based on these inputs in order to produce results.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> JavaScript, Node.js, Axios</p>
                   </div>
               </div>
             </div>
@@ -329,9 +328,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A train schedule simulator that uses Firebase to maintain persistent data.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, Firebase</p>
                   </div>
               </div>
             </div>
@@ -360,9 +359,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A gif generating page created with a fighting game character theme. Images are pulled via AJAX from the GIPHY API.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, AJAX</p>
                   </div>
               </div>
             </div>
@@ -392,9 +391,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A console-based word guess game that uses constructor functions to create game sessions and handle guess inputs from the user.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> JavaScript, Node.js</p>
                   </div>
               </div>
             </div>
@@ -423,9 +422,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A program that uses MVC structure and allows the user to change the state of "burgers" from "ready" to "devoured" and back again, as well as add new burgers to the database.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> MySQL, JavaScript, Node.js, Handlebars</p>
                   </div>
               </div>
             </div>
@@ -454,9 +453,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A basic hangman game with a Star Wars theme.</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, JavaScript</p>
                   </div>
               </div>
             </div>
@@ -485,9 +484,9 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p><u class="unBold">Description:</u> A program that simulates a friend matching app, which matches the user with the most eligible friend based on responses to a series of 10 statements..</p>
                     <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
+                    <p><u class="unBold">Technologies Used:</u> HTML5, JavaScript, API</p>
                   </div>
               </div>
             </div>
