Updating main page with skill info cards

--- a/index.html
+++ b/index.html
@@ -54,6 +54,60 @@
 
             </nav>
         </div>
+        <!-- Top Section -->
+        <div class="row">
+            <div class="container"
+                style="background-color: #F5DEB3; max-width: 40%; margin-top: 10vh; margin-bottom: 4vh; margin-left: 30vw; padding: 2em; position: relative">
+                <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 36pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
+                    <u>Joe Hutchinson</u></h1>
+                    <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700; text-align: center; line-height: 2">
+                        Full Stack Web Developer / Experienced Team Manager</h2>
+                        <a href="https://github.com/JoeLearns2Code" target="_blank">
+                            <i class="fa fa-github"><img src="assets/images/GitHub-Mark-32px.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 19em"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
+                            <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
+                        </a>
+        </div>
+
+        <!-- Skills Section -->
+        <div class="row">
+            <div class="container"
+                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 12vw; padding: 2em; position: relative">
+                <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 30pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
+                    <u>Skills</u></h1>
+                    <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
+
+                <div class="col-sm-12 col-m-6">
+                    <div class="card-deck">
+                        <div class="card">
+                          <img src="..." class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="..." class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="..." class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          </div>
+                        </div>
+                      </div>
+                </div>    
+        </div>
+
         <div class="row">
             <!-- About Me section -->
             <div class="container"
@@ -96,7 +150,7 @@
 
 
 
-    <footer class="page-footer font-small grey fixed-bottom"
+    <footer class="page-footer font-small grey"
                 style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#343a40 !important; border-top: 3px solid #228B22; color: #ffffff">
 
                
