--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <div class="container" style="max-width: 100%">
       <div class="row">
         <nav
-          class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left"
+          class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left fixed-top"
           style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#343a40  !important; border-bottom: 3px solid #228B22"
         >
           <h1
