Added Skills section

--- a/index.html
+++ b/index.html
@@ -73,35 +73,50 @@
         <!-- Skills Section -->
         <div class="row">
             <div class="container"
-                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 12vw; padding: 2em; position: relative">
+                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 15vw; padding: 2em; position: relative">
                 <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 30pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
                     <u>Skills</u></h1>
                     <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
 
                 <div class="col-sm-12 col-m-6">
                     <div class="card-deck">
+                        <div class="card" style="width: 45vw">
+                            <div class="card-body">
+                              <h5 class="skill-title">Front End</h5>
+                              <ul class="skill-list">
+                                  <li>-HTML5</li>
+                                  <li>-CSS3</li>
+                                  <li>-jQuery</li>
+                                  <li>-React.js</li>
+                                  <li>-Handlebars</li>
+                              </ul>
+                            </div>
+                          </div>
                         <div class="card">
-                          <img src="..." class="card-img-top" alt="...">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="skill-title">Back End</h5>
+                            <ul class="skill-list">
+                                <li>-JavaScript</li>
+                                <li>-AJAX</li>
+                                <li>-Node.js</li>
+                                <li>-MySQL</li>
+                                <li>-MongoDB</li>
+                            </ul>
+                            
                           </div>
                         </div>
                         <div class="card">
-                          <img src="..." class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                          </div>
-                        </div>
-                        <div class="card">
-                          <img src="..." class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <div class="card-body">
+                              <h5 class="skill-title">Soft Skills</h5>
+                              <ul class="skill-list">
+                                    <li>-Team Management</li>
+                                    <li>-Data Analysis</li>
+                                    <li>-Employee Training</li>
+                                    <li>-Writing/Proof-Reading</li>
+                                    <li>-Project Planning</li>
+                              </ul>
+                              
+                            </div>
                           </div>
                         </div>
                       </div>
