--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
             </nav>
         </div>
         <!-- Top Section -->
+        <div class="container">
         <div class="row">
-            <div class="xs-col-12 md-col-6 lg-col-3">
+            <div class="xs-col-12 md-col-6">
             <div class="container" id="cont-top"
-            style="background-color: #F5DEB3; max-width: 100%; margin-top: 10vh; margin-bottom: 4vh; margin-left: 18vw; padding: 1em; position: relative; display: inline-block;">
+            style="background-color: #F5DEB3; max-width: 85%; margin-top: 10vh; margin-bottom: 4vh; margin-left: 9vw; padding: 2em; position: relative; display: inline-block;">
             <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 36pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
                     <u>Joe Hutchinson</u></h1>
                     <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700; text-align: center; line-height: 2; margin: 0 auto">
                         Full Stack Web Developer / Experienced Team Manager</h2>
                         <a href="https://github.com/JoeLearns2Code" target="_blank">
-                            <i class="fa fa-github"><img src="assets/images/GitHub-Mark-32px.png" style="width: 2.5em; margin-bottom: -.25em; display: inline-block; margin-left: 23vw"></i>
+                            <i class="fa fa-github"><img src="assets/images/GitHub-Mark-32px.png" style="width: 2.5em; margin-bottom: -.25em; display: inline-block; margin-left: 16vw"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
                             <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
@@ -75,7 +76,7 @@
         <!-- Skills Section -->
         <div class="row">
             <div class="container"
-                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 12vw; padding: 2em; position: relative">
+                style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 10vw; padding: 2em; position: relative">
                 <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 30pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
                     <u>Skills</u></h1>
                     <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
@@ -128,7 +129,7 @@
         <div class="row">
             <!-- About Me section -->
             <div class="container"
-                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 12vw; padding: 2em; position: relative">
+                style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 10vw; padding: 2em; position: relative">
                 <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700">
                     About Me</h2>
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
@@ -145,6 +146,7 @@
                     2-year old nephew whom I love and adore.</p>
             </div>
         </div>
+    </div>
     </div>
 
 
