Adjusting margins, improving mobile view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container" style="max-width: 100%">
         <div class="row">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left"
+            <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left fixed-top"
                 style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#343a40  !important; border-bottom: 3px solid #228B22">
                 <h2 id=myName
                     style="font-family: 'El Messiri', sans-serif; font-size: 30pt; text-align: center; font-weight: 700; padding: 2vh; margin-bottom: 0vh; margin-left: 0vw; width: 8em; color: #ffffff">
@@ -54,12 +54,14 @@
 
             </nav>
         </div>
+        <div class="row" style="height: 15vh">
+            </div>
         <!-- Top Section -->
         <div class="container">
         <div class="row">
             <div class="xs-col-12 md-col-6">
             <div class="container" id="cont-top"
-            style="background-color: #F5DEB3; max-width: 85%; margin-top: 10vh; margin-bottom: 4vh; margin-left: 9vw; padding: 2em; position: relative; display: inline-block;">
+            style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 9vw; padding: 2em; position: relative; display: inline-block;">
             <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 36pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
                     <u>Joe Hutchinson</u></h1>
                     <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700; text-align: center; line-height: 2; margin: 0 auto">
@@ -76,14 +78,14 @@
         <!-- Skills Section -->
         <div class="row">
             <div class="container"
-                style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 10vw; padding: 2em; position: relative">
+                style="background-color: #F5DEB3; max-width: 85%; margin-top: 2vh; margin-bottom: 4vh; margin-left: 9vw; padding: 2em; position: relative">
                 <h1 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 30pt; color: #228B22; font-weight: 700; text-align: center; line-height: 1.5">
                     <u>Skills</u></h1>
                     <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
 
                 <div class="col-sm-12 col-m-6">
                     <div class="card-deck">
-                        <div class="card" style="width: 45vw">
+                        <div class="card">
                             <div class="card-body">
                               <h5 class="skill-title">Front End</h5>
                               <ul class="skill-list">
@@ -101,6 +103,8 @@
                             <ul class="skill-list">
                                 <li>-JavaScript</li>
                                 <li>-AJAX</li>
+                                <li>-JSON</li>
+                                <li>-RESTful API</li>
                                 <li>-Node.js</li>
                                 <li>-MySQL</li>
                                 <li>-MongoDB</li>
@@ -129,7 +133,7 @@
         <div class="row">
             <!-- About Me section -->
             <div class="container"
-                style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 10vw; padding: 2em; position: relative">
+                style="background-color: #F5DEB3; max-width: 85%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 6vw; padding: 2em; position: relative">
                 <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700">
                     About Me</h2>
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
@@ -148,22 +152,6 @@
         </div>
     </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
