--- a/portfolio.html
+++ b/portfolio.html
@@ -134,11 +134,15 @@
                 >
                 <div class="descTechText">
                   <p>
-                    <u class="unBold">Description:</u> (Collaboration)  Life Relocated is a moving/relocation app that makes API calls to Google Maps and Wolfram Alpha to provide location & demographic information about a desired location.
+                    <u class="unBold">Description:</u> (Collaboration) Life
+                    Relocated is a moving/relocation app that makes API calls to
+                    Google Maps and Wolfram Alpha to provide location &
+                    demographic information about a desired location.
                   </p>
                   <br />
                   <p>
-                    <u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, AJAX
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3,
+                    jQuery, AJAX
                   </p>
                 </div>
               </div>
@@ -169,11 +173,14 @@
                 >
                 <div class="descTechText">
                   <p>
-                    <u class="unBold">Description:</u> (Collaboration)  sPAWtted is an app designed to allow the user to report lost cats & dogs.
+                    <u class="unBold">Description:</u> (Collaboration) sPAWtted
+                    is an app designed to allow the user to report lost cats &
+                    dogs.
                   </p>
                   <br />
                   <p>
-                    <u class="unBold">Technologies Used:</u> MySQL, Handlebars, jQuery, Node.js
+                    <u class="unBold">Technologies Used:</u> MySQL, Handlebars,
+                    jQuery, Node.js
                   </p>
                 </div>
               </div>
@@ -203,10 +210,15 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A short, timed trivia game utilizing interval and timeout functions.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A short, timed trivia
+                    game utilizing interval and timeout functions.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -234,10 +246,16 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A simple number matching game where random values are generated and added together to attempt to equal a random value.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A simple number matching
+                    game where random values are generated and added together to
+                    attempt to equal a random value.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -265,10 +283,18 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A console-based program that simulates a simplified online retail site.  Inventory can be subtracted and added through use of customer and manager programs.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> MySQL, Node.js, JavaScript</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A console-based program
+                    that simulates a simplified online retail site. Inventory
+                    can be subtracted and added through use of customer and
+                    manager programs.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> MySQL, Node.js,
+                    JavaScript
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -296,10 +322,19 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> LIRI Bot is a program that can retrieve information about bands on tour, songs, and movies. It takes in user inputs from a command terminal and pulls data from different API's based on these inputs in order to produce results.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> JavaScript, Node.js, Axios</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> LIRI Bot is a program
+                    that can retrieve information about bands on tour, songs,
+                    and movies. It takes in user inputs from a command terminal
+                    and pulls data from different API's based on these inputs in
+                    order to produce results.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> JavaScript,
+                    Node.js, Axios
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -328,10 +363,16 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A train schedule simulator that uses Firebase to maintain persistent data.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, Firebase</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A train schedule
+                    simulator that uses Firebase to maintain persistent data.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3,
+                    jQuery, Firebase
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -359,10 +400,17 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A gif generating page created with a fighting game character theme. Images are pulled via AJAX from the GIPHY API.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, jQuery, AJAX</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A gif generating page
+                    created with a fighting game character theme. Images are
+                    pulled via AJAX from the GIPHY API.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3,
+                    jQuery, AJAX
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -391,10 +439,16 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A console-based word guess game that uses constructor functions to create game sessions and handle guess inputs from the user.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> JavaScript, Node.js</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A console-based word
+                    guess game that uses constructor functions to create game
+                    sessions and handle guess inputs from the user.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> JavaScript, Node.js
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -422,10 +476,18 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A program that uses MVC structure and allows the user to change the state of "burgers" from "ready" to "devoured" and back again, as well as add new burgers to the database.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> MySQL, JavaScript, Node.js, Handlebars</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A program that uses MVC
+                    structure and allows the user to change the state of
+                    "burgers" from "ready" to "devoured" and back again, as well
+                    as add new burgers to the database.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> MySQL, JavaScript,
+                    Node.js, Handlebars
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -453,10 +515,16 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A basic hangman game with a Star Wars theme.</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, CSS3, JavaScript</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A basic hangman game with
+                    a Star Wars theme.
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, CSS3,
+                    JavaScript
+                  </p>
+                </div>
               </div>
             </div>
 
@@ -484,10 +552,18 @@
                   >View on GitHub</a
                 >
                 <div class="descTechText">
-                    <p><u class="unBold">Description:</u> A program that simulates a friend matching app, which matches the user with the most eligible friend based on responses to a series of 10 statements..</p>
-                    <br>
-                    <p><u class="unBold">Technologies Used:</u> HTML5, JavaScript, API</p>
-                  </div>
+                  <p>
+                    <u class="unBold">Description:</u> A program that simulates
+                    a friend matching app, which matches the user with the most
+                    eligible friend based on responses to a series of 10
+                    statements..
+                  </p>
+                  <br />
+                  <p>
+                    <u class="unBold">Technologies Used:</u> HTML5, JavaScript,
+                    API
+                  </p>
+                </div>
               </div>
             </div>
           </div>
